# Decencord

./: .gitignore  db_schema.sql  docker-compose.yml  nginx.conf
backend/: CMakeLists.txt  Dockerfile  dev.sh  global_state.ts  package.json  pg_client.ts  server.ts  websocket.ts
backend/peer_server/: Dockerfile  server.js
backend/src/: AuthController.h  BasicController.h  CorsMiddleware.h  WebsocketController.h  config.json  config_example.json  main.cpp
backend/src/lib/: DbConnection.h  JsonBodyHandling.h  sessionManagement.h
frontend/: Dockerfile  bun.lockb  nginx.conf  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.vue  main.ts  style.css  types.ts
frontend/src/components/: Chat.vue  ChatMessage.vue  FormError.vue  ServerList.vue  TextInput.vue  Voicechat.vue
frontend/src/composables/: useRTC.ts  useStore.ts  useWSSync.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/views/: IndexView.vue  LoginView.vue  TextChannelView.vue  VoiceChannelView.vue
